assets/css/style.css
/* IMPOSTAZIONI GENERALI */
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

body {
  background-image: url(../img/sfondo.png);
  font-family: "Poppins", sans-serif;
}

header,
main,
footer {
  max-width: 25%;
  margin: 0 auto;
  box-shadow: 0px 5px 4px 1px #000000;
}

a:visited {
  color: #1cabda;
}

/* HEADER */
header {
  text-align: center;
  background: linear-gradient(0deg, #006b8b, #3297bf);
  margin-top: 4%;
  padding: 4%;
  color: white;
}

header img {
  width: 85%;
}

header p {
  margin: 7% 0;
}

header a {
  text-decoration: none;
  margin: 2%;
  font-weight: 600;
}

header a:visited {
  text-decoration: none;
  color: white;
}

header li {
  margin-top: 2%;
}
/* MAIN */
main {
  margin: 3.5% auto;
  background-color: white;
  padding: 4%;
}
/* ELEMENTI NEL MAIN - ARTICLE */
#title {
  font-size: 2.5em;
  font-weight: 500;
  line-height: 1.4em;
  margin-top: 0;
}

.article-info {
  color: rgb(146, 146, 146);
  font-size: 1.3em;
  margin: 1em 0;
  line-height: 1.4em;
}

main p,
main li {
  font-size: 1.3em;
  margin: 1em 0;
  line-height: 1.4em;
}

main p b {
  font-weight: 500;
  color: rgb(176, 27, 129);
}

main ul li {
  list-style-type: disc;
  list-style-position: inside;
}

main h2 {
  font-size: 1.3em;
  margin-top: 1.8em;
}

main a {
  font-weight: 600;
}

main ul,
main ol {
  padding-left: 3%;
}

main ol li {
  list-style-type: decimal;
  list-style-position: inside;
}

ul b {
  background-color: rgb(235 234 234 / 80%);
  border: 2px solid #c8c8c8;
  border-radius: 6px;
}

iframe {
  width: 100%;
  height: 300px;
  border-radius: 20px;
}

#novità-container {
  background-color: lightgray;
  text-align: center;
  padding: 5% 2%;
  margin-top: 8%;
}

#novità-container h2 {
  margin-top: 0;
}

#articoli-correlati {
  font-size: 2em;
  text-align: center;
  margin-bottom: 8%;
  font-weight: 600;
}

.related {
  background-color: rgb(235 234 234 / 80%);
  border: 2px solid #c8c8c8;
  padding: 6% 5% 2%;
  font-size: 1.2em;
  margin-bottom: 5%;
}

.tag {
  font-size: 1em;
}

.data {
  font-size: 0.8em;
  text-align: end;
}
/* TABELLE */

table {
  margin-left: auto;
  margin-right: auto;
  border-bottom: 2px solid #176cbc;
}

table caption {
  font-weight: 600;
  font-size: 1.4em;
}

th,
td {
  font-size: 1.3em;
  padding: 1em;
}

.colored-tr {
  background-color: rgb(211 211 211 / 39%);
  border-top: 1.5px solid rgb(160 157 157 / 49%);
  border-bottom: 1.5px solid rgb(160 157 157 / 49%);
}

thead th {
  background-color: #176cbc;
  color: white;
  border: 1px solid white;
  padding: 5%;
}
/* FORM */
form {
  height: 1.8em;
  width: 100%;
}

#novità-container h2 {
  font-size: 2em;
  text-align: center;
  margin-bottom: 8%;
  font-weight: 600;
}

#novità-container input {
  border: none;
  height: 100%;
  font-size: 1.3em;
  padding-left: 1.5%;
  border-bottom: 1px dashed grey;
  width: 50%;
}

#novità-container button {
  height: 100%;
  color: white;
  background-color: #176cbc;
  font-size: 1.5em;
  padding: 0.1em 0.5em 1.2em 0.5em;
  border: none;
}

/* ELEMENTI NELL' ASIDE */

/* FOOTER */
footer {
  padding: 2% 4%;
  background: linear-gradient(0deg, #001417, #006e7f);
  color: white;
  text-align: center;
  margin-bottom: 2%;
}

footer p {
  margin-bottom: 6%;
}

address {
  line-height: 1.3em;
}

address a {
  color: #cf27cf;
  font-weight: bold;
}

